syntax = "proto3";

package booking_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotation.proto";

option go_package = "github.com/vitaliysev/mts_go_project/pkg/booking_v1;booking_v1";

service BookingV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/booking/v1/create"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/booking/v1"
    };
  }
  rpc List(ListRequest) returns (ListResponse){
    option (google.api.http) = {
      get: "/booking/v1/list"
    };
  }
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/booking/v1"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/booking/v1"
    };
  }
}

message BookInfo {
  string title = 1;
  string period_use = 2;
}

message Book {
  int64 id = 1;
  BookInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateBookInfo {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue period_use = 2;
}

message CreateRequest {
  BookInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  Book book = 1;
}

message ListRequest {
  int64 limit = 1;
  int64 offset = 2;
  string hotel = 3;
}

message ListResponse {
  repeated Book books = 1;
}

message UpdateRequest {
  int64 id = 1;
  UpdateBookInfo info = 2;
}

message DeleteRequest {
  int64 id = 1;
}